on Create.js changed the button place, added the uniqID on the function handleSubmit, changed the method on handleTotal. On Main.js added the function to remove the item, putted some style

--- a/src/style.css
+++ b/src/style.css
@@ -5,3 +5,16 @@ body {
 ul {
   list-style: none;
 }
+
+.div-item {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.div-item button {
+  margin-top: 5px;
+}
+
+.list-items li {
+  padding: 7px;
+}
