--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,12 @@ body {
   font-family: Roboto;
 }
 
+.big-size-h1 {
+  font-size: 140px;
+  letter-spacing: 13px;
+  text-align: right;
+}
+
 ul {
   list-style: none;
 }
